--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@oclif/command": "^1.6.1",
     "@oclif/config": "^1.15.1",
     "@oclif/plugin-help": "^3.0.0",
+    "fuse.js": "^6.4.1",
     "inquirer": "^7.1.0",
+    "inquirer-autocomplete-prompt": "^1.1.0",
     "lodash": "^4.17.15",
     "tslib": "^1.13.0"
   },
